--- a/demos/index.html
+++ b/demos/index.html
@@ -31,8 +31,10 @@
   </div>
   <br/>
   <div class="container">
+    <div>
     <label>END DATE</label>
     <input type="text" id="datepicker2"/>
+  </div>
   </div>
 
   <script type="text/javascript">
