Updated and added to bower

--- a/demos/index.html
+++ b/demos/index.html
@@ -39,7 +39,8 @@
 
   <script type="text/javascript">
     var foopicker = new FooPicker({
-      id: 'datepicker'
+      id: 'datepicker',
+      disable: [-1]
     });
     var foopicker2 = new FooPicker({
       id: 'datepicker2'
