Added date formats support

--- a/demos/index.html
+++ b/demos/index.html
@@ -40,7 +40,7 @@
   <script type="text/javascript">
     var foopicker = new FooPicker({
       id: 'datepicker',
-      disable: [-1]
+      dateFormat: 'yyyy/MMM/dd'
     });
     var foopicker2 = new FooPicker({
       id: 'datepicker2'
