Fix 2 digit day issue

--- a/demos/index.html
+++ b/demos/index.html
@@ -27,7 +27,7 @@
 <body>
   <div class="container">
     <label>START DATE</label>
-    <input type="text" id="datepicker" value="02/11/2017"/>
+    <input type="text" id="datepicker" value="02/07/2017"/>
   </div>
   <br/>
   <div class="container">
@@ -41,7 +41,7 @@
     var foopicker = new FooPicker({
       id: 'datepicker',
       dateFormat: 'dd/MM/yyyy',
-      disable: ['29/07/2017', '30/07/2017', '31/07/2017']
+      disable: ['29/07/2017', '30/07/2017', '31/07/2017', '01/08/2017']
     });
     var foopicker2 = new FooPicker({
       id: 'datepicker2'
