Fix manual date edit selection

--- a/demos/index.html
+++ b/demos/index.html
@@ -33,7 +33,7 @@
   <div class="container">
     <div>
     <label>END DATE</label>
-    <input type="text" id="datepicker2" value="18-5-2017"/>
+    <input type="text" id="datepicker2" value="18-May-2017"/>
   </div>
   </div>
 
